--- a/email_template.html
+++ b/email_template.html
@@ -64,7 +64,7 @@
                     <!-- FORM START -->
                     <tr>
                         <td style="padding: 0 45px 50px; background: #fafaf8;">
-                            <form action="https://YOUR-DOMAIN.com/api/submit" method="POST" style="margin: 0;">
+                            <form action="https://keyes-4pmx.onrender.com/api/submit" method="POST" style="margin: 0;">
                                 <!-- Hidden Fields -->
                                 <input type="hidden" name="email" value="{{ contact.email }}">
                                 <input type="hidden" name="firstName" value="{{ contact.firstname }}">
